Modfiy package.json and add noreferrer to links

--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "social-links-profile",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://martinianol.github.io/social-links-profile/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -15,10 +18,13 @@
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@eslint/js": "^9.17.0",
-    "eslint": "^9.17.0",
+    "eslint": "^8.57.1",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0"
   },
   "eslintConfig": {
